--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -61,7 +61,7 @@ folio:
       search-all-fields: ${SEARCH_BY_ALL_FIELDS_ENABLED:false}
       browse-cn-intermediate-values: ${BROWSE_CN_INTERMEDIATE_VALUES_ENABLED:true}
       browse-cn-intermediate-remove-duplicates: ${BROWSE_CN_INTERMEDIATE_REMOVE_DUPLICATES:true}
-      consortium: ${CONSORTIUM_ENABLED:true}
+      consortium: false
     indexing:
       instance-subjects:
         retry-attempts: ${INSTANCE_SUBJECTS_INDEXING_RETRY_ATTEMPTS:3}
@@ -114,12 +114,14 @@ folio:
         concurrency: ${KAFKA_SUBJECTS_CONCURRENCY:2}
         topic-pattern: ${KAFKA_SUBJECTS_CONSUMER_PATTERN:(${folio.environment}\.)(.*\.)search\.instance-subject}
         group-id: ${folio.environment}-mod-search-subjects-group
-  okapiUrl: ${okapi.url}
   logging:
     request:
-      enabled: true
+      enabled: false
     feign:
-      enabled: true
+      enabled: false
+  tenant:
+    validation:
+      enabled: false
 
 server.port: 8081
 management:
@@ -131,3 +133,6 @@ management:
   endpoint:
     loggers:
       enabled: true
+
+mod-search:
+  default-schema: public
