--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -97,6 +97,9 @@ folio:
       - name: search.instance-subject
         numPartitions: ${KAFKA_SUBJECTS_TOPIC_PARTITIONS:50}
         replicationFactor: ${KAFKA_SUBJECTS_TOPIC_REPLICATION_FACTOR:}
+      - name: search.bibframe
+        numPartitions: ${KAFKA_BIBFRAME_TOPIC_PARTITIONS:3}
+        replicationFactor: ${KAFKA_BIBFRAME_TOPIC_REPLICATION_FACTOR:}
     listener:
       events:
         concurrency: ${KAFKA_EVENTS_CONCURRENCY:2}
@@ -114,6 +117,10 @@ folio:
         concurrency: ${KAFKA_SUBJECTS_CONCURRENCY:2}
         topic-pattern: ${KAFKA_SUBJECTS_CONSUMER_PATTERN:(${folio.environment}\.)(.*\.)search\.instance-subject}
         group-id: ${folio.environment}-mod-search-subjects-group
+      bibframe:
+        concurrency: ${KAFKA_BIBFRAME_CONCURRENCY:1}
+        topic-pattern: ${KAFKA_BIBFRAME_CONSUMER_PATTERN:(${folio.environment}\.)(.*\.)search\.bibframe}
+        group-id: ${folio.environment}-mod-search-bibframe-group
   logging:
     request:
       enabled: false
