--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
     <relativePath />
   </parent>
 
-  <name>mod-search</name>
+  <name>mod-search-ld</name>
   <groupId>org.folio</groupId>
-  <artifactId>mod-search</artifactId>
+  <artifactId>mod-search-ld</artifactId>
   <version>2.1.0-SNAPSHOT</version>
   <description>FOLIO search service</description>
   <packaging>jar</packaging>
