MODLD-81: disable cache based on tenant (temporary)

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -19,3 +19,8 @@ spring:
             url: http://localhost:8085
 
 server.port: 8085
+
+folio:
+  search-config:
+    search-features:
+      consortium: false
