--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -98,6 +98,9 @@ folio:
       - name: search.consortium.instance
         numPartitions: 1
         replicationFactor: 1
+      - name: search.bibframe
+        numPartitions: 1
+        replicationFactor: 1
     listener:
       events:
         concurrency: 2
@@ -119,6 +122,10 @@ folio:
         concurrency: 2
         topic-pattern: (${folio.environment}\.)(.*\.)search\.consortium\.instance
         group-id: ${folio.environment}-mod-search-consortium-instance-group
+      bibframe:
+        concurrency: ${KAFKA_BIBFRAME_CONCURRENCY:1}
+        topic-pattern: ${KAFKA_BIBFRAME_CONSUMER_PATTERN:(${folio.environment}\.)(.*\.)search\.bibframe}
+        group-id: ${folio.environment}-mod-search-bibframe-group
   okapiUrl: ${okapi.url}
   logging:
     request:
