--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
     <relativePath />
   </parent>
 
-  <name>mod-search</name>
+  <name>mod-search-ld</name>
   <groupId>org.folio</groupId>
   <artifactId>mod-search</artifactId>
   <version>3.0.0-SNAPSHOT</version>
-  <description>FOLIO search service</description>
+  <description>FOLIO search service (LD clone)</description>
   <packaging>jar</packaging>
 
   <licenses>
