--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
     <relativePath />
   </parent>
 
-  <name>mod-search</name>
+  <name>mod-search-ld</name>
   <groupId>org.folio</groupId>
   <artifactId>mod-search</artifactId>
   <version>3.0.0-SNAPSHOT</version>
-  <description>FOLIO search service</description>
+  <description>FOLIO search service (LD clone)</description>
   <packaging>jar</packaging>
 
   <licenses>
@@ -35,7 +35,7 @@
     </sonar.exclusions>
 
     <folio-spring-support.version>7.2.0</folio-spring-support.version>
-    <folio-service-tools.version>3.1.0-SNAPSHOT</folio-service-tools.version>
+    <folio-service-tools.version>3.1.0</folio-service-tools.version>
     <folio-isbn-utils.version>1.5.0</folio-isbn-utils.version>
     <folio-cql2pgjson.version>35.0.6</folio-cql2pgjson.version>
     <opensearch.version>2.9.0</opensearch.version>
