--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -93,6 +93,9 @@ folio:
       - name: search.instance-subject
         numPartitions: 10
         replicationFactor: 1
+      - name: search.bibframe
+        numPartitions: 1
+        replicationFactor: 1
     listener:
       events:
         concurrency: 2
@@ -110,6 +113,10 @@ folio:
         concurrency: ${KAFKA_SUBJECTS_CONCURRENCY:1}
         topic-pattern: ${KAFKA_SUBJECTS_CONSUMER_PATTERN:(${folio.environment}\.)(.*\.)search\.instance-subject}
         group-id: ${folio.environment}-mod-search-subjects-group
+      bibframe:
+        concurrency: ${KAFKA_BIBFRAME_CONCURRENCY:1}
+        topic-pattern: ${KAFKA_BIBFRAME_CONSUMER_PATTERN:(${folio.environment}\.)(.*\.)search\.bibframe}
+        group-id: ${folio.environment}-mod-search-bibframe-group
   okapiUrl: ${okapi.url}
   logging:
     request:
