--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: mod-search
+    name: mod-search-ld
   jackson:
     default-property-inclusion: non_null
     deserialization:
