--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: mod-search
+    name: mod-search-ld
   main:
      banner-mode: off
      allow-bean-definition-overriding: true
