--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: mod-search
+    name: mod-search-ld
   jackson:
     default-property-inclusion: non_null
     deserialization:
@@ -74,8 +74,8 @@ folio:
   cache:
     call-number-browse-ranges-cache-spec: maximumSize=50,expireAfterWrite=60s
   system-user:
-    username: mod-search
-    password: ${SYSTEM_USER_PASSWORD:Mod-search-1-0-0}
+    username: mod-search-ld
+    password: ${SYSTEM_USER_PASSWORD:Mod-search-ld-1-0-0}
     lastname: System
     permissionsFilePath: permissions/mod-search.csv
   stream-ids:
