--- a/src/main/resources/swagger.api/examples/bibframeSearchResult.sample
+++ b/src/main/resources/swagger.api/examples/bibframeSearchResult.sample
@@ -1,36 +1,75 @@
 {
-    "searchQuery": "isbn=1234567890",
-    "content": [
+  "searchQuery": "query string",
+  "content": [
+    {
+      "id": "1",
+      "titles": [
         {
-            "id": "bibframeId",
-            "titles": [
-                {
-                    "value": "title",
-                    "type": "Main"
-                }
-            ],
-            "identifiers": [
-                {
-                    "value": "1234567890",
-                    "type": "ISBN"
-                }
-            ],
-            "contributors": [
-                {
-                    "name": "name",
-                    "primary": true
-                }
-            ],
-            "publications": [
-                {
-                    "publisher": "publisher",
-                    "dateOfPublication": "2023"
-                }
-            ],
-            "editionStatement": "1st edition"
+          "value": "Title Value",
+          "type": "Main"
         }
-    ],
-    "pageNumber": 0,
-    "totalPages": 0,
-    "totalRecords": 1
+      ],
+      "contributors": [
+        {
+          "name": "John Doe",
+          "type": "Person",
+          "isCreator": true
+        }
+      ],
+      "languages": [
+        {
+          "value": "eng"
+        }
+      ],
+      "classifications": [
+        {
+          "number": "1234",
+          "source": "ddc"
+        }
+      ],
+      "subjects": [
+        {
+          "value": "Subject"
+        }
+      ],
+      "instances": [
+        {
+          "id": "2",
+          "titles": [
+            {
+              "value": "Title Value",
+              "type": "Main"
+            }
+          ],
+          "identifiers": [
+            {
+              "value": "1234567890",
+              "type": "ISBN"
+            }
+          ],
+          "contributors": [
+            {
+              "name": "John Doe",
+              "type": "Person",
+              "isCreator": true
+            }
+          ],
+          "publications": [
+            {
+              "name": "Publisher Name",
+              "date": "2022"
+            }
+          ],
+          "editionStatements": [
+            {
+              "value": "Edition 1"
+            }
+          ]
+        }
+      ]
+    }
+  ],
+  "pageNumber": 0,
+  "totalPages": 10,
+  "totalRecords": 100
 }
