--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
     </sonar.exclusions>
 
     <folio-spring-support.version>8.2.0-SNAPSHOT</folio-spring-support.version>
+    <folio-spring-testing-support.version>8.1.1</folio-spring-testing-support.version>
     <folio-service-tools.version>4.1.0-SNAPSHOT</folio-service-tools.version>
     <folio-isbn-utils.version>1.7.0-SNAPSHOT</folio-isbn-utils.version>
     <folio-cql2pgjson.version>35.2.2</folio-cql2pgjson.version>
@@ -265,7 +266,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>folio-spring-testing</artifactId>
-      <version>${folio-spring-support.version}</version>
+      <version>${folio-spring-testing-support.version}</version>
     </dependency>
   </dependencies>
 
